# maclocal-api

./: .gitattributes  .gitignore  .gitmodules  .webui_secret_key  AGENTS.md  CLAUDE.md  MANIFEST.in  Makefile  Package.swift  README.md  build-portable.sh  build-release.sh  build.sh  create-distribution.sh  install.sh  pyproject-next.toml  pyproject.toml  test-all-features.sh  test-go.sh  test-metrics.sh  test-streaming.sh
Tests/VulcanBench/: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIXTURE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
Tests/VulcanBench/docs/: ARCHITECTURE.md  DEPLOYMENT.md  LARGE_TASK_HANDBOOK.md  METRICS.md  QUICKSTART.md  REPRODUCIBILITY.md  ROADMAP.md  TASK_CONTRIBUTION.md
Tests/VulcanBench/harness/: __init__.py  calibration.py  cli.py  cost_estimate.py  cost_priors.py  effort.py  leaderboard.py  persistence.py  pricing.py  redaction.py  report.py  suite.py  task_metadata.py  tasks.py  validate.py  verifier.py
Tests/VulcanBench/harness/agent/: local_executor.py  loop.py  protocol.py  providers.py  test_commands.py
Tests/VulcanBench/harness/data/: cost_priors.json
Tests/VulcanBench/harness/evaluator/: __init__.py  evaluate.py  judges.py  langs.py  quality.py  scorer.py  security.py
Tests/VulcanBench/harness/sandbox/: __init__.py  docker_executor.py  images.py
Tests/VulcanBench/harness/tracer/: collector.py
Tests/VulcanBench/sandbox/: Dockerfile.base  Dockerfile.rust  task.Dockerfile.template
Tests/VulcanBench/scripts/: export_cost_priors.py  import_oss_issues.py  ingest_runs.py  seed_oss_corpus.py  slice_repo.py  validate_tasks.py
Tests/VulcanBench/tasks/v1/: suite.json
Tests/VulcanBench/tasks/v1/go-csv-quoting/: expected_metrics.json  gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/go-lru-cache/: expected_metrics.json  gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/go-money-allocate/: expected_metrics.json  gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/go-stack-pop-bug/: expected_metrics.json  gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/go-worker-pool/: expected_metrics.json  gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/hello-world/: expected_metrics.json  issue.md  metadata.json  verifier.py
Tests/VulcanBench/tasks/v1/oss-go-errwrap-unwrap/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-go-m2-01/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-go-m2-04/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-go-m2-07/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-go-m3-01/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-go-m3-04/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-go-m3-07/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-go-m3-10/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-go-m3-13/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-go-metrics-labels/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-inflection-titleize/: expected_metrics.json  gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-pilot-acme-retry/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-cache-evict/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-config-merge/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-ledger-rounding/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m2-00/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m2-03/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m2-06/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m2-09/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m3-00/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m3-03/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m3-06/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m3-09/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m3-12/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-py-m3-15/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-ts-router-params/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-ts-validate-coerce/: .vulcanbenchignore  gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-ty-m2-02/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-ty-m2-05/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tasks/v1/oss-ty-m2-08/: gold_patch.diff  issue.md  metadata.json
Tests/VulcanBench/tests/: __init__.py  test_agent_loop.py  test_aggregate.py  test_backend.py  test_calibration.py  test_calibration_backend.py  test_cargo_prune.py  test_cli.py  test_collector.py  test_cost_estimate.py  test_dataset.py  test_db.py  test_docker_executor.py  test_effort.py  test_evaluate.py  test_evaluator.py  test_executor.py  test_judges.py  test_lang_analyzers.py  test_leaderboard.py  test_local_executor_caps.py  test_persistence.py  test_pricing.py  test_providers.py  test_quality.py  test_redaction.py  test_report.py  test_rust_analyzers.py  test_sandbox_images.py  test_security.py  test_setup_hook.py  test_suite.py  test_suite_aliases.py  test_task_hash.py  test_task_metadata.py  test_tasks.py  test_test_commands.py  test_validate_tasks.py  test_verifier.py
Tests/VulcanBench/tests/fixtures/: cost_priors_min.json
(+1473 files in other folders)
