[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macafm"
version = "0.9.3"
description = "Access Apple's on-device Foundation Models via CLI and OpenAI-compatible API"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sylvain Cousineau", email = "scouzi1966@users.noreply.github.com"}
]
keywords = [
    "apple",
    "foundation-models",
    "llm",
    "openai",
    "api",
    "macos",
    "apple-silicon",
    "ai",
    "machine-learning",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/scouzi1966/maclocal-api"
Documentation = "https://github.com/scouzi1966/maclocal-api#readme"
Repository = "https://github.com/scouzi1966/maclocal-api"
Issues = "https://github.com/scouzi1966/maclocal-api/issues"

[project.scripts]
afm = "macafm.cli:main"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[tool.setuptools]
packages = ["macafm"]
include-package-data = true

[tool.setuptools.package-data]
macafm = ["bin/*", "share/webui/*"]
