[project]
name = "vulcanbench"
version = "0.5.1"
description = "VulcanBench v1 - open-source LLM benchmarking harness for realistic software engineering tasks"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
  {name = "VulcanBench Contributors"}
]
keywords = ["llm", "benchmark", "swe-bench", "agent", "evaluation", "reproducibility"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "typer[all]>=0.12.3",
  "pydantic>=2.8.0,<3",
  "pydantic-settings>=2.3.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.1",
  "docker>=7.1.0",
  "tenacity>=8.4.0",
  "jsonschema>=4.22.0",
  "python-dotenv>=1.0.1",
  # Evaluator: quality (lint + complexity) and security analysis for Python.
  # JS/Go/Java analyzers shell out to external toolchains when present (optional).
  "ruff>=0.5.0",
  "radon>=6.0",
  "bandit>=1.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.11.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.4.0",
  "pre-commit>=3.7.0",
  "types-pyyaml>=6.0.12",
  "types-docker>=7.0.0",
]
test = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0",     # Starlette TestClient
  "fastapi>=0.115.0",  # exercise the API in CI
  "sqlmodel>=0.0.21",  # exercise the DB store (SQLite) in CI
]
backend = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.21",
  "psycopg[binary]>=3.1",  # sync Postgres driver for the DB store
  "alembic>=1.13.0",
]

[project.scripts]
vulcanbench = "harness.cli:app"

[project.urls]
Homepage = "https://github.com/morganlinton/VulcanBench"
Repository = "https://github.com/morganlinton/VulcanBench"
Documentation = "https://github.com/morganlinton/VulcanBench/tree/main/docs"
Issues = "https://github.com/morganlinton/VulcanBench/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*", "backend*"]
namespaces = false

# Task corpus and sandbox Dockerfiles ship in the git clone, not the PyPI wheel.
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
harness = ["data/cost_priors.json"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "runs",
  "tasks",  # task fixtures include intentionally-buggy code + per-language tests
  "dashboard",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["harness"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
exclude = [
  "dashboard/",
  "tests/fixtures/",
  "runs/",
]

[[tool.mypy.overrides]]
# radon ships no type stubs / py.typed marker.
module = ["radon.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]

minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers --cov=harness --cov-report=term-missing:skip-covered --cov-fail-under=80"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "docker: requires Docker daemon (deselect with '-m \"not docker\"')",
  "integration: integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["harness"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
